refactor/스터디 상품 엔티티 필드 명 변경 (#115)
1. StudyProductDetail 컬렉션 테이블 명 변경 -> Content

2.Topic 값 타입이 가지는 의미가 추상적임 - 사용하지 않음